# saumon

./: .gitignore  .ocamlformat  .travis.yml  Makefile  README.md  dune-project  saumon.opam
examples/: 1-hello-world.lox  2-variables.lox  3-scopes.lox  4-if-else.lox  README.md
lib/: Either.ml  ast.ml  display.ml  display.mli  dune  environment.ml  environment.mli  interpreter.ml  interpreter.mli  location.ml  omnipresent.ml  omnipresent.mli  parser.ml  parser.mli  scanner.ml  scanner.mli  token.ml  token.mli  token_kind.ml  value.ml
scripts/: apply_ocamlformat.sh
test/: alcotest_testable.ml  dune  interpreter_expression_tests.ml  interpreter_statement_tests.ml  interpreter_tests.ml  parser_declaration_tests.ml  parser_expression_tests.ml  parser_statement_tests.ml  parser_tests.ml  scanner_tests.ml  test_utils.ml  unit_tests.ml
test/integration-tests/: 1-hello-world.lox.ref  2-variables.lox.ref  4-if-else.lox.ref  README.md  dune  fibonacci.lox  for-loop.lox.expected  hello-world.lox.expected  scopes.lox.expected  variables.lox  variables.lox.expected  while-loop.lox.expected
test/integration-tests/fibonacci.t/: run.t
test/integration-tests/for-loop.t/: run.t  src.lox
test/integration-tests/hello-world.t/: run.t
test/integration-tests/if-else.t/: run.t
test/integration-tests/scopes.t/: run.t
test/integration-tests/variables.t/: run.t
test/integration-tests/while-loop.t/: run.t  src.lox
test/unit-tests/: Interpreter_conditional_tests.ml  Makefile  alcohoul.ml  alcotest_testable.ml  dune  environment_tests.ml  interpreter_block_tests.ml  interpreter_conditional_tests.ml  interpreter_expression_tests.ml  interpreter_statement_tests.ml  interpreter_while_tests.ml  parser_block_tests.ml  parser_conditional_tests.ml  parser_declaration_tests.ml  parser_expression_tests.ml  parser_for_tests.ml  parser_statement_tests.ml  parser_while_tests.ml  scanner_tests.ml  unit_tests.ml
