opam-version: "2.0"

version: "dev"
synopsis: "Lox language implemented in OCaml"

maintainer: "Ludwig Pacifici <ludwig@ludwig.cc>"
authors: ["Ludwig Pacifici <ludwig@ludwig.cc>"]

homepage: "https://github.com/ludwigpacifici/saumon"
bug-reports: "https://github.com/ludwigpacifici/saumon/issues"
dev-repo: "git+https://github.com/ludwigpacifici/saumon.git"

license: "GNU GENERAL PUBLIC LICENSE Version 3"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "core" {>= "v0.12"}
  "dune" {build}
  "ocaml" {>= "4.02"}
  "alcotest" {with-test & >= "0.8"}
  "ppx_deriving" {>= "4.2.1"}
  "ppx_jane" {>= "v0.12"}
]
